// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverDropdownTest render 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      aria-label="start over menu"
      componentref="[object Object]"
      iconname="ArrowClockwiseRegular"
      menuiconprops="[object Object]"
      text="Start over"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render ContextualMenu 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      aria-label="start over menu"
      componentref="[object Object]"
      iconname="ArrowClockwiseRegular"
      menuiconprops="[object Object]"
      text="Start over"
    />
    <mock-contextualmenu
      directionalhint="7"
      items="[object Object],[object Object]"
      target="test event"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render with dropdown on left 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      aria-label="start over menu"
      componentref="[object Object]"
      iconname="ArrowClockwiseRegular"
      menuiconprops="[object Object]"
      text="Start over"
    />
    <mock-contextualmenu
      directionalhint="8"
      items="[object Object],[object Object]"
      target="test target"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render: ContextualMenu props 1`] = `undefined`;

exports[`StartOverDropdownTest render: InsightsCommandButton props 1`] = `
{
  "aria-label": "start over menu",
  "componentRef": {},
  "iconName": "ArrowClockwiseRegular",
  "menuIconProps": {
    "iconName": "ChevronDownRegular",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;
